Manually converted every packet to a record class.